IDE launcher args