@@ -21,5 +21,15 @@ run with other OS than MacOS x64 please change the jogl and skija platform
 <jogl.platform>macosx-universal</jogl.platform>
 ```
 
-
+```
+--module-path /Library/Java/JavaFX/javafx-sdk-16/lib 
+--add-modules javafx.controls 
+--add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED 
+--add-opens javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED 
+--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED 
+--add-opens javafx.graphics/javafx.stage=ALL-UNNAMED 
+-Djava.awt.headless=true 
+-Djogamp.debug.JNILibLoader=true 
+-Djogamp.debug.NativeLibrary=true
+```
 ![Demo](jogl-skia-mac.png "Demo")
